--- a/projee/index.html
+++ b/projee/index.html
@@ -2,242 +2,366 @@
 <html>
 
 <head>
-  <!-- Bootstrap kütüphanesinidahil ediyoruz -->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" />
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-  <!-- Bootstap -->
-  <style>
-body {font-family: Arial, Helvetica, sans-serif;}
+    <!-- Bootstrap kütüphanesinidahil ediyoruz -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" />
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+    <!-- Bootstap -->
+    <style>
+        body {
+            font-family: Arial, Helvetica, sans-serif;
+        }
 
-/* Full-width input fields */
-input[type=text], input[type=password] {
-  width: 100%;
-  padding: 12px 20px;
-  margin: 8px 0;
-  display: inline-block;
-  border: 1px solid #ccc;
-  box-sizing: border-box;
-}
+        input[type=text],
+        input[type=password] {
+            width: 100%;
+            padding: 12px 20px;
+            margin: 8px 0;
+            display: inline-block;
+            border: 1px solid #ccc;
+            box-sizing: border-box;
+        }
 
-/* Set a style for all buttons */
-button {
-  background-color: #4CAF50;
-  color: white;
-  padding: 14px 20px;
-  margin: 8px 0;
-  border: none;
-  cursor: pointer;
-  width: 100%;
-}
+        button {
+            background-color: rgba(216, 67, 62, 0.719);
+            color: floralwhite;
+            padding: 8px 7px;
+            margin: 8px 0;
+            border: none;
+            cursor: pointer;
+            width: 100%;
+            border-radius: 8px;
+        }
 
-button:hover {
-  opacity: 0.8;
-}
+        button:hover {
+            opacity: 0.8;
+        }
 
-/* Extra styles for the cancel button */
-.cancelbtn {
-  width: auto;
-  padding: 10px 18px;
-  background-color: #f44336;
-}
+        .cancelbtn {
+            width: auto;
+            padding: 10px 18px;
+            background-color: #f44336;
+        }
 
-/* Center the image and position the close button */
-.imgcontainer {
-  text-align: center;
-  margin: 24px 0 12px 0;
-  position: relative;
-}
+        .imgcontainer {
+            text-align: center;
+            margin: 24px 0 12px 0;
+            position: relative;
+        }
 
-img.avatar {
-  width: 40%;
-  border-radius: 50%;
-}
+        .container {
+            padding: 16px;
+        }
 
-.container {
-  padding: 16px;
-}
+        span.psw {
+            float: right;
+            padding-top: 16px;
+        }
 
-span.psw {
-  float: right;
-  padding-top: 16px;
-}
+        .modal {
+            display: none;
+            position: fixed;
+            z-index: 1;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            overflow: auto;
+            background-color: rgb(0, 0, 0);
+            background-color: rgba(0, 0, 0, 0.4);
+            padding-top: 60px;
+        }
 
-/* The Modal (background) */
-.modal {
-  display: none; /* Hidden by default */
-  position: fixed; /* Stay in place */
-  z-index: 1; /* Sit on top */
-  left: 0;
-  top: 0;
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
-  overflow: auto; /* Enable scroll if needed */
-  background-color: rgb(0,0,0); /* Fallback color */
-  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
-  padding-top: 60px;
-}
+        .modal-content {
+            background-color: #fefefe;
+            margin: 5% auto 15% auto;
+            border: 1px solid #888;
+            width: 80%;
+        }
 
-/* Modal Content/Box */
-.modal-content {
-  background-color: #fefefe;
-  margin: 5% auto 15% auto; /* 5% from the top, 15% from the bottom and centered */
-  border: 1px solid #888;
-  width: 80%; /* Could be more or less, depending on screen size */
-}
+        .close {
+            position: absolute;
+            right: 25px;
+            top: 0;
+            color: #000;
+            font-size: 35px;
+            font-weight: bold;
+        }
 
-/* The Close Button (x) */
-.close {
-  position: absolute;
-  right: 25px;
-  top: 0;
-  color: #000;
-  font-size: 35px;
-  font-weight: bold;
-}
+        .close:hover,
+        .close:focus {
+            color: red;
+            cursor: pointer;
+        }
 
-.close:hover,
-.close:focus {
-  color: red;
-  cursor: pointer;
-}
+        .animate {
+            -webkit-animation: animatezoom 0.6s;
+            animation: animatezoom 0.6s
+        }
 
-/* Add Zoom Animation */
-.animate {
-  -webkit-animation: animatezoom 0.6s;
-  animation: animatezoom 0.6s
-}
+        @-webkit-keyframes animatezoom {
+            from {
+                -webkit-transform: scale(0)
+            }
 
-@-webkit-keyframes animatezoom {
-  from {-webkit-transform: scale(0)} 
-  to {-webkit-transform: scale(1)}
-}
-  
-@keyframes animatezoom {
-  from {transform: scale(0)} 
-  to {transform: scale(1)}
-}
+            to {
+                -webkit-transform: scale(1)
+            }
+        }
 
-/* Change styles for span and cancel button on extra small screens */
-@media screen and (max-width: 300px) {
-  span.psw {
-     display: block;
-     float: none;
-  }
-  .cancelbtn {
-     width: 100%;
-  }
-}
-</style>
+        @keyframes animatezoom {
+            from {
+                transform: scale(0)
+            }
+
+            to {
+                transform: scale(1)
+            }
+        }
+
+        @media screen and (max-width: 300px) {
+            span.psw {
+                display: block;
+                float: none;
+            }
+
+            .cancelbtn {
+                width: 100%;
+            }
+        }
+    </style>
 
 </head>
 
+
 <body>
+    <div id="id01" class="modal">
 
+        <form class="modal-content animate" action="/action_page.php" method="post">
+            <div class="imgcontainer">
+                <span onclick="document.getElementById('id01').style.display='none'" class="close"
+                    title="Close Modal">&times;</span>
+            </div>
 
+            <div class="container">
+                <label for="uname"><b>Kullanıcı Adı</b></label>
+                <input type="text" placeholder="" name="uname" required>
 
-<div id="id01" class="modal">
-  
-  <form class="modal-content animate" action="/action_page.php" method="post">
-    <div class="imgcontainer">
-      <span onclick="document.getElementById('id01').style.display='none'" class="close" title="Close Modal">&times;</span>
-      <img src="img_avatar2.png" alt="Avatar" class="avatar">
+                <label for="psw"><b>Şifre</b></label>
+                <input type="password" placeholder="" name="psw" required>
+
+                <button type="submit">Giriş Yap</button>
+                <label>
+                    <input type="checkbox" checked="checked" name="remember"> Beni Hatırla
+                </label>
+            </div>
+
+            <div class="container" style="background-color:#f1f1f1">
+                <button type="button" onclick="document.getElementById('id01').style.display='none'"
+                    class="cancelbtn">İptal </button>
+                <span class="psw"><a href="#">Şifreni mi unuttun?</a></span>
+            </div>
+        </form>
     </div>
 
-    <div class="container">
-      <label for="uname"><b>Username</b></label>
-      <input type="text" placeholder="Enter Username" name="uname" required>
+    <script>
+        var modal = document.getElementById('id01');
 
-      <label for="psw"><b>Password</b></label>
-      <input type="password" placeholder="Enter Password" name="psw" required>
-        
-      <button type="submit">Login</button>
-      <label>
-        <input type="checkbox" checked="checked" name="remember"> Remember me
-      </label>
+        window.onclick = function (event) {
+            if (event.target == modal) {
+                modal.style.display = "none";
+            }
+        }
+    </script>
+
+
+    <nav class="navbar navbar-expand-lg navbar-light" style="background-color:#FF9800">
+        <a class="navbar-brand" href="#">
+            <img src="sari.png" width="75" height="50" class="d-inline-block align-top" />
+            <font size="5" face="Hobo Std" color="#960018">MONDO DELLA PASTA</font><br>
+
+
+        </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+                <font size="3" face="Bookman Old Style">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="index.html"><b>Ana Sayfa</b><span class="sr-only">(current)</span></a>
+                    </li>
+                </font>
+                <li class="nav-item">
+                    <font size="3" face="Bookman Old Style">
+                        <a class="nav-link" href="makarna.html"><b>Makarnalarımız</b></a>
+                    </font>
+                </li>
+                <li class="nav-item">
+                    <font size="3" face="Bookman Old Style">
+                        <a class="nav-link" href="tarifler.html"><b>Tarifler</b></a>
+                    </font>
+                </li>
+            </ul>
+            <button onclick="document.getElementById('id01').style.display='block'" style="width:auto;">Giriş
+                Yap</button>
+        </div>
+    </nav>
+    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+        </ol>
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img class="d-block w-100" src="slider1.jpeg" width="330" height="520">
+            </div>
+            <div class="carousel-item">
+                <img class="d-block w-100" src="slider2.jpeg" width="330" height="520">
+            </div>
+            <div class="carousel-item">
+                <img class="d-block w-100" src="slider3.jpeg" width="330" height="520">
+            </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
     </div>
-
-    <div class="container" style="background-color:#f1f1f1">
-      <button type="button" onclick="document.getElementById('id01').style.display='none'" class="cancelbtn">Cancel</button>
-      <span class="psw">Forgot <a href="#">password?</a></span>
-    </div>
-  </form>
-</div>
-
-<script>
-// Get the modal
-var modal = document.getElementById('id01');
-
-// When the user clicks anywhere outside of the modal, close it
-window.onclick = function(event) {
-    if (event.target == modal) {
-        modal.style.display = "none";
-    }
-}
-</script>
-
-  <nav class="navbar navbar-expand-lg navbar-light" style="background-color:#FF9800">
-    <a class="navbar-brand" href="#">
-      <img src="sari.png" width="75" height="50" class="d-inline-block align-top" />
-      <font size="5" face="Hobo Std" color="#960018">MONDO DELLA PASTA</font><br>
-
-
-    </a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-
-
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav mr-auto">
-        <font size="3" face="Bookman Old Style">
-          <li class="nav-item active">
-            <a class="nav-link" href="index.html"><b>Ana Sayfa</b><span class="sr-only">(current)</span></a>
-          </li>
+    <br>
+    <div class="alert alert-warning" role="alert">
+        <font face="Batang">
+            <h5>Makarnanın Yanında Ne Gider ? &darr;</h5>
         </font>
-        <li class="nav-item">
-          <font size="3" face="Bookman Old Style">
-            <a class="nav-link" href="makarna.html"><b>Makarnalarımız</b></a>
-          </font>
-        </li>
-        <li class="nav-item">
-          <font size="3" face="Bookman Old Style">
-            <a class="nav-link" href="tarifler.html"><b>Tarifler</b></a>
-          </font>
-        </li>
-      </ul>
-<button onclick="document.getElementById('id01').style.display='block'" style="width:auto;">Login</button>
     </div>
-  </nav>
-  <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-    <ol class="carousel-indicators">
-      <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-      <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-      <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-    </ol>
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img class="d-block w-100" src="slider1.jpeg" width="330" height="520">
-      </div>
-      <div class="carousel-item">
-        <img class="d-block w-100" src="slider2.jpeg" width="330" height="520">
-      </div>
-      <div class="carousel-item">
-        <img class="d-block w-100" src="slider3.jpeg" width="330" height="520">
-      </div>
+    <div class="card-deck">
+        <div class="card">
+            <img src="dcorba.jpg" class="card-img-top">
+            <div class="card-body">
+                <hr>
+                <h5 class="card-title">Domates Çorbası</h5>
+                </p>
+            </div>
+            <div class="card-footer">
+                <small class="text-muted"></small>
+            </div>
+        </div>
+        <div class="card">
+            <img src="mercimekcorba.jpg" class="card-img-top">
+            <div class="card-body">
+                <hr>
+                <h5 class="card-title">Mercimek Çorbası</h5>
+                </p>
+            </div>
+            <div class="card-footer">
+                <small class="text-muted"></small>
+            </div>
+        </div>
+        <div class="card">
+            <img src="ızgarakofte.jpg" class="card-img-top" width="400" height="320">
+            <div class="card-body">
+                <hr>
+                <h5 class="card-title">Izgara Köfte</h5>
+                </p>
+            </div>
+            <div class="card-footer">
+                <small class="text-muted"></small>
+            </div>
+        </div>
     </div>
-    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="sr-only">Previous</span>
-    </a>
-    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="sr-only">Next</span>
-    </a>
+    <div class="card-deck">
+        <div class="card">
+            <img src="paprikali.jpg" class="card-img-top" width="550" height="315">
+            <div class="card-body">
+                <hr>
+                <h5 class="card-title">Paprikalı Tavuk</h5>
+            </div>
+            <div class="card-footer">
+                <small class="text-muted"></small>
+            </div>
+        </div>
+        <div class="card">
+            <img src="yogurtlama.jpg" class="card-img-top" width="300" height="315">
+            <div class="card-body">
+                <hr>
+                <h5 class="card-title">Yoğurtlama</h5>
+                </p>
+            </div>
+            <div class="card-footer">
+                <small class="text-muted"></small>
+            </div>
+        </div>
+        <div class="card">
+            <img src="kremalimantarsote.jpg" class="card-img-top" width="400" height="315">
+            <div class="card-body">
+                <hr>
+                <h5 class="card-title">Kremalı Mantar Sote</h5>
+            </div>
+            <div class="card-footer">
+                <small class="text-muted"></small>
+            </div>
+        </div>
+    </div>
+    <div class="card-deck">
+        <div class="card">
+            <img src="saksuka.jpg" class="card-img-top" width="350" height="270">
+            <div class="card-body">
+                <hr>
+                <h5 class="card-title">Şakşuka</h5>
 
-  </div>
+            </div>
+            <div class="card-footer">
+                <small class="text-muted"></small>
+            </div>
+        </div>
+        <div class="card">
+            <img src="dsosizgarapatlican.jpg" class="card-img-top" width="350" height="270">
+            <div class="card-body">
+                <hr>
+                <h5 class="card-title">Domates Soslu Izgara Patlıcan</h5>
+            </div>
+            <div class="card-footer">
+                <small class="text-muted"></small>
+            </div>
+        </div>
+        <div class="card">
+            <img src="eginpiyazi.jpg" class="card-img-top" width="350" height="270">
+            <div class="card-body">
+                <hr>
+                <h5 class="card-title">Eğin Piyazi</h5>
+            </div>
+            <div class="card-footer">
+                <small class="text-muted"></small>
+            </div>
+        </div>
+    </div>
+    <br>
+    <div class="alert alert-warning" role="alert">
+        <font face="Batang">
+            <h5>İletişim &darr;</h5>
+            <img src="gmail.jpg" width="48" height="30"> : smaburc@gamil.com / 1figenyildiz@gmail.com
+        </font>
+        <br>
+        <font face="Batang">
+            <img src="tel.png" width="47" height="40"> : 0536 397 00 11 / 0531 315 86 21
+        </font>
+        <br>
+        <font face="Batang">
+            <img src="twitter.png" width="50" height="50"> : mondoDellaPasta
+        </font>
+        <br>
+        <font face="Batang">
+            <img src="instagram.png" width="50" height="50"> : mondoDella-Pasta
+        </font>
 
 </body>
 
